--- a/blog/app/assets/stylesheets/articles.scss
+++ b/blog/app/assets/stylesheets/articles.scss
@@ -15,3 +15,12 @@ textarea{
     background-color: green;
     resize: none;
 }
+input[type=button], input[type=submit] {
+    background-color: #4CAF50;
+    float: right;
+    border: none;
+    color: white;
+    padding: 16px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
